# clipboard-history

./: Cargo.toml  Makefile  README.md  build.sh  clipboard-daemon-wrapper.sh  clipboard-daemon.service  config.toml.example  install.sh
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs  listener.rs  x11.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  persistence.rs
crates/core/src/buffer/: entry.rs  mod.rs  ring_buffer.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: dbus_service.rs  main.rs
crates/deamon/: Cargo.toml
crates/deamon/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs
